--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,15 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.5/phpunit.xsd"
+         xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/10.5/phpunit.xsd"
          bootstrap="vendor/codeigniter4/framework/system/Test/bootstrap.php"
          backupGlobals="false"
-         beStrictAboutCoversAnnotation="true"
          beStrictAboutOutputDuringTests="true"
-         beStrictAboutTodoAnnotatedTests="true"
          colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
          executionOrder="random"
          failOnRisky="true"
          failOnWarning="true"
@@ -17,17 +12,10 @@
          stopOnFailure="false"
          stopOnIncomplete="false"
          stopOnSkipped="false"
-         verbose="true">
+         cacheDirectory=".phpunit.cache"
+         beStrictAboutCoverageMetadata="true">
 
-    <coverage includeUncoveredFiles="true" processUncoveredFiles="true">
-        <include>
-            <directory suffix=".php">./src/</directory>
-        </include>
-        <exclude>
-            <directory suffix=".php">./src/Commands/Generators</directory>
-            <directory suffix=".php">./src/Commands/Utils</directory>
-            <directory suffix=".php">./src/Config</directory>
-        </exclude>
+    <coverage includeUncoveredFiles="true">
         <report>
             <clover outputFile="build/phpunit/clover.xml"/>
             <html outputDirectory="build/phpunit/html"/>
@@ -44,27 +32,11 @@
     </testsuites>
 
     <extensions>
-        <extension class="Nexus\PHPUnit\Extension\Tachycardia">
-            <arguments>
-                <array>
-                    <element key="timeLimit">
-                        <double>0.50</double>
-                    </element>
-                    <element key="reportable">
-                        <integer>30</integer>
-                    </element>
-                    <element key="precision">
-                        <integer>2</integer>
-                    </element>
-                    <element key="collectBare">
-                        <boolean>true</boolean>
-                    </element>
-                    <element key="tabulate">
-                        <boolean>true</boolean>
-                    </element>
-                </array>
-            </arguments>
-        </extension>
+        <bootstrap class="Nexus\PHPUnit\Tachycardia\TachycardiaExtension">
+            <parameter name="time-limit" value="0.50"/>
+            <parameter name="report-count" value="30"/>
+            <parameter name="format" value="table"/>
+        </bootstrap>
     </extensions>
 
     <logging>
@@ -100,4 +72,14 @@
         <env name="database.tests.DBPrefix" value="tests_"/>
         -->
     </php>
+    <source>
+        <include>
+            <directory suffix=".php">./src/</directory>
+        </include>
+        <exclude>
+            <directory suffix=".php">./src/Commands/Generators</directory>
+            <directory suffix=".php">./src/Commands/Utils</directory>
+            <directory suffix=".php">./src/Config</directory>
+        </exclude>
+    </source>
 </phpunit>
